--- a/projects/angular/src/layout/density/_properties.density.scss
+++ b/projects/angular/src/layout/density/_properties.density.scss
@@ -89,7 +89,7 @@
   --clr-base-layout-space-4xl: #{mixins.baselinePx(76)};
   --clr-base-layout-space-5xl: #{mixins.baselinePx(112)};
 
-  --clr-base-icon-tooltip: #{mixins.baselinePx(18)};
+  --clr-base-icon-tooltip: #{tokens.$cds-global-space-8};
   --clr-base-spinner-72: #{tokens.$cds-global-space-14};
 
   [clr-density='regular'] {
