feat(density): pr feedback

--- a/projects/angular/src/layout/density/_variables.density.scss
+++ b/projects/angular/src/layout/density/_variables.density.scss
@@ -32,6 +32,7 @@ $clr-base-offset-0: var(--clr-base-offset-0);
 
 $clr-base-vertical-offset-2xs: var(--clr-base-vertical-offset-2xs);
 $clr-base-vertical-offset-xs: var(--clr-base-vertical-offset-xs);
+$clr-base-vertical-offset-s: var(--clr-base-vertical-offset-s);
 $clr-base-vertical-offset-m: var(--clr-base-vertical-offset-m);
 $clr-base-vertical-offset-l: var(--clr-base-vertical-offset-l);
 $clr-base-vertical-offset-xl: var(--clr-base-vertical-offset-xl);
