--- a/projects/angular/src/layout/density/_properties.density.scss
+++ b/projects/angular/src/layout/density/_properties.density.scss
@@ -200,7 +200,7 @@
     --clr-base-border-radius-s: #{tokens.$cds-global-space-3};
     --clr-base-border-radius-m: #{tokens.$cds-global-space-5};
     --clr-base-border-radius-l: #{tokens.$cds-global-space-6};
-    --clr-base-border-radius-xl: #{tokens.$cds-global-space-7};
+    --clr-base-border-radius-xl: #{mixins.baselinePx(10)};
 
     --clr-base-offset-0: #{tokens.$cds-global-space-0};
 
@@ -286,7 +286,7 @@
   //   --clr-base-border-radius-s: #{tokens.$cds-global-space-3};
   //   --clr-base-border-radius-m: #{tokens.$cds-global-space-5};
   //   --clr-base-border-radius-l: #{tokens.$cds-global-space-6};
-  //   --clr-base-border-radius-xl: #{tokens.$cds-global-space-7};
+  //   --clr-base-border-radius-xl: #{mixins.baselinePx(10)};
 
   //   --clr-base-offset-0: #{tokens.$cds-global-space-0};
 
