feat(density): finish alerts

--- a/projects/demo/src/app/layout/layout-size.html
+++ b/projects/demo/src/app/layout/layout-size.html
@@ -1,6 +1,6 @@
 <div class="clr-row" xmlns="http://www.w3.org/1999/html">
   <div class="clr-col-4 density-container" *ngFor="let density of densities" [attr.clr-density]="density.type">
-    <h3>{{density.name}}</h3>
+    <h3 cds-layout="m-b:md">{{density.name}}</h3>
     <div>
       <h4>Alerts</h4>
       <div class="clr-example">
