--- a/projects/angular/src/emphasis/alert/_alert.clarity.scss
+++ b/projects/angular/src/emphasis/alert/_alert.clarity.scss
@@ -238,13 +238,13 @@
 
     .close {
       order: 100;
-      flex: 0 0 tokens.$cds-global-space-9;
-      @include mixins.equilateral(tokens.$cds-global-space-9);
+      flex: 0 0 density.$clr-base-icon-size-l;
+      @include mixins.equilateral(density.$clr-base-icon-size-l);
       margin: density.$clr-base-vertical-offset-m 0;
 
       cds-icon,
       clr-icon {
-        @include mixins.min-equilateral(tokens.$cds-global-space-9);
+        @include mixins.min-equilateral(density.$clr-base-icon-size-l);
       }
     }
 
@@ -380,7 +380,7 @@
 
   .alert-sm {
     .alert-items {
-      padding: density.$clr-base-vertical-offset-s 0;
+      padding: density.$clr-base-vertical-offset-xs 0;
       gap: 0;
 
       .alert-item {
@@ -412,7 +412,7 @@
     }
 
     .close {
-      margin: density.$clr-base-vertical-offset-s 0;
+      margin: density.$clr-base-vertical-offset-xs 0;
     }
 
     .alert-spinner.spinner-inline {
@@ -429,10 +429,12 @@
       border: none;
 
       .alert-items {
-        gap: tokens.$cds-global-space-3;
+        gap: density.$clr-base-gap-xs;
 
         .alert-item {
-          padding: density.$clr-base-layout-space-xs 0;
+          padding: density.$clr-base-layout-space-0 0;
+          align-items: center;
+          min-height: density.$clr-base-row-height-s;
 
           > span,
           .alert-actions,
@@ -449,6 +451,7 @@
           .alert-icon-wrapper {
             flex-basis: tokens.$cds-global-space-7;
             height: tokens.$cds-global-space-7;
+            padding: 0;
           }
         }
       }
