--- a/projects/angular/src/forms/styles/_containers.clarity.scss
+++ b/projects/angular/src/forms/styles/_containers.clarity.scss
@@ -8,6 +8,7 @@
 @use 'mixins.forms' as forms-mixins;
 @use '@cds/core/tokens/tokens.scss';
 @use 'variables.forms' as forms-variables;
+@use '../../layout/density' as density;
 
 @include mixins.exports('forms.containers') {
   .clr-form-control {
@@ -67,6 +68,8 @@
       'SECONDARY-13-SB-CPT',
       (
         font-weight: forms-variables.$clr-forms-label-font-weight,
+        font-size: density.$clr-base-typography-font-size-inline,
+        line-height: density.$clr-base-typography-line-height-16,
       )
     );
   }
@@ -77,9 +80,11 @@
     @include mixins.generate-typography-token(
       'SECONDARY-13-RG-EXP',
       (
-        font-size: forms-variables.$clr-forms-field-font-size,
+        font-size: density.$clr-base-typography-font-size-caption,
+        line-height: density.$clr-base-typography-line-height-16,
       )
     );
+    line-height: 200px !important;
   }
 
   .clr-control-inline {
@@ -88,9 +93,15 @@
 
   .clr-subtext {
     display: block;
-    @include mixins.generate-typography-token('CAPTION-LG-11');
+    @include mixins.generate-typography-token(
+      'CAPTION-LG-11',
+      (
+        font-size: density.$clr-base-typography-font-size-caption,
+        line-height: density.$clr-base-typography-line-height-16,
+      )
+    );
     color: forms-variables.$clr-forms-subtext-color;
-    margin-top: tokens.$cds-global-space-3;
+    margin-top: density.$clr-base-layout-space-2xs;
 
     &.error {
       color: forms-variables.$clr-forms-invalid-text-color;
@@ -107,7 +118,7 @@
   }
 
   .clr-validate-icon {
-    @include mixins.min-equilateral(forms-variables.$clr-forms-icon-size);
+    @include mixins.min-equilateral(density.$clr-base-layout-space-m);
     color: forms-variables.$clr-forms-invalid-color;
     fill: forms-variables.$clr-forms-invalid-color;
     display: none;
