--- a/projects/angular/src/forms/styles/_textarea.clarity.scss
+++ b/projects/angular/src/forms/styles/_textarea.clarity.scss
@@ -7,6 +7,7 @@
 @use '../../utils/mixins';
 @use 'mixins.forms' as forms-mixins;
 @use 'variables.forms' as forms-variables;
+@use '../../layout/density' as density;
 @use '@cds/core/tokens/tokens.scss';
 
 @include mixins.exports('forms.textarea') {
@@ -14,7 +15,7 @@
   .clr-textarea-wrapper {
     white-space: nowrap;
     display: flex;
-    margin-top: tokens.$cds-global-space-5;
+    margin-top: density.$clr-base-layout-space-xs;
     .clr-validate-icon {
       margin-left: 0;
     }
@@ -27,9 +28,15 @@
     border: tokens.$cds-alias-object-border-width-100 solid forms-variables.$clr-forms-border-color;
     background: forms-variables.$clr-forms-textarea-background-color;
     color: forms-variables.$clr-forms-text-color;
-    border-radius: forms-variables.$clr-forms-textarea-border-radius;
-    padding: tokens.$cds-global-space-7;
-    @include mixins.generate-typography-token('SECONDARY-13-RG-STD');
+    border-radius: density.$clr-base-border-radius-s;
+    padding: density.$clr-base-layout-space-m;
+    @include mixins.generate-typography-token(
+      'SECONDARY-13-RG-STD',
+      (
+        font-size: density.$clr-base-typography-font-size-inline,
+        line-height: density.$clr-base-typography-line-height-20,
+      )
+    );
 
     &:focus {
       // TODO(CDE-863) - Remove outline mixin and convert this component to just use border-color to avoid the white
