--- a/projects/angular/src/forms/styles/_checkbox.clarity.scss
+++ b/projects/angular/src/forms/styles/_checkbox.clarity.scss
@@ -7,6 +7,7 @@
 @use '../../emphasis/alert/variables.alert' as alert-variables;
 @use '../../utils/mixins';
 @use '../../utils/variables/variables.global';
+@use '../../layout/density';
 @use 'mixins.forms' as forms-mixins;
 @use 'variables.forms' as forms-variables;
 
@@ -41,7 +42,7 @@
       @include forms-mixins.checkbox-radio-input-styles(forms-variables.$clr-forms-checkbox-size);
       @extend %custom-checkbox;
       border-radius: forms-variables.$clr-forms-checkbox-border-radius; // Style outline radius properly
-      padding: tokens.$cds-global-space-3 0;
+      padding: density.$clr-base-vertical-offset-xs 0;
 
       &:not(:disabled) {
         cursor: pointer;
