--- a/projects/angular/src/forms/styles/_variables.forms.scss
+++ b/projects/angular/src/forms/styles/_variables.forms.scss
@@ -6,6 +6,7 @@
  */
 
 @use '@cds/core/tokens/tokens.scss';
+@use '../../layout/density';
 
 // Structure
 $clr-forms-baseline: var(--clr-forms-baseline);
@@ -84,10 +85,10 @@ $clr-forms-checkbox-disabled-border-color: var(--clr-forms-checkbox-disabled-bor
 $clr-forms-checkbox-disabled-indeterminate-color: var(--clr-forms-checkbox-disabled-indeterminate-color) !default;
 $clr-forms-checkbox-disabled-mark-color: var(--clr-forms-checkbox-disabled-mark-color) !default;
 
-$clr-forms-checkbox-label-height: calc(#{$clr-forms-baseline} * 4);
+$clr-forms-checkbox-label-height: #{density.$clr-base-row-height-s};
 $clr-forms-checkbox-top: calc(calc(#{$clr-forms-checkbox-label-height} - #{$clr-forms-checkbox-height}) * 0.5) !default;
 
-$clr-forms-checkbox-size: #{tokens.$cds-global-space-9};
+$clr-forms-checkbox-size: #{density.$clr-base-row-height-s};
 $clr-forms-checkbox-padding-left: calc(#{$clr-forms-checkbox-height} + #{tokens.$cds-global-space-5});
 $clr-forms-checkbox-mark-size: calc(#{$clr-forms-checkbox-height} * 0.5);
 $clr-forms-checkbox-mark-border-size: calc(#{$clr-forms-checkbox-height} * 0.125);
