--- a/projects/demo/src/app/layout/layout-size.html
+++ b/projects/demo/src/app/layout/layout-size.html
@@ -162,5 +162,54 @@
         </a>
       </div>
     </div>
+
+    <h4>Checkboxes, Toggles and Radios</h4>
+    <div class="clr-row">
+      <div class="clr-example clr-col-4">
+        <input type="checkbox" clrCheckbox />
+
+        <input type="checkbox" clrCheckbox id="checkbox-testing456-{{density.type}}" />
+
+        <clr-checkbox-wrapper>
+          <input type="checkbox" clrCheckbox />
+          <label>Test</label>
+        </clr-checkbox-wrapper>
+
+        <clr-checkbox-wrapper>
+          <input type="checkbox" clrCheckbox id="checkbox-testing123-{{density.type}}" />
+          <label for="checkbox-testing123-{{density.type}}">Test</label>
+        </clr-checkbox-wrapper>
+      </div>
+      <div class="clr-example clr-col-4">
+        <input type="checkbox" clrToggle />
+
+        <input type="checkbox" clrToggle id="toggle-testing456-{{density.type}}" />
+
+        <clr-toggle-wrapper>
+          <input type="checkbox" clrToggle />
+          <label>Test</label>
+        </clr-toggle-wrapper>
+
+        <clr-toggle-wrapper>
+          <input type="checkbox" clrToggle id="toggle-testing123-{{density.type}}" />
+          <label for="toggle-testing123-{{density.type}}">Test</label>
+        </clr-toggle-wrapper>
+      </div>
+      <div class="clr-example clr-col-4">
+        <input type="radio" clrRadio />
+
+        <input type="radio" clrRadio id="radio-testing456-{{density.type}}" />
+
+        <clr-radio-wrapper>
+          <input type="radio" clrRadio />
+          <label>Test</label>
+        </clr-radio-wrapper>
+
+        <clr-radio-wrapper>
+          <input type="radio" clrRadio id="radio-testing123-{{density.type}}" />
+          <label for="radio-testing123-{{density.type}}">Test</label>
+        </clr-radio-wrapper>
+      </div>
+    </div>
   </div>
 </div>
