--- a/projects/angular/src/forms/styles/_mixins.forms.scss
+++ b/projects/angular/src/forms/styles/_mixins.forms.scss
@@ -8,6 +8,7 @@
 @use '@cds/core/tokens/tokens.scss';
 
 @use '../../utils/variables/variables.global';
+@use '../../layout/density';
 @use 'variables.forms' as forms-variables;
 
 // Flatten the error icon and message to be inline for certain input types
@@ -112,7 +113,7 @@
   margin-top: 0;
   cursor: pointer;
   min-height: $min-height;
-  padding: #{tokens.$cds-global-space-3} 0;
+  padding: density.$clr-base-vertical-offset-xs 0;
   color: $color;
   @include mixins.generate-typography-token($typography);
 }
