--- a/projects/angular/src/forms/styles/_radio.clarity.scss
+++ b/projects/angular/src/forms/styles/_radio.clarity.scss
@@ -7,6 +7,7 @@
 @use '../../utils/mixins';
 @use 'mixins.forms' as forms-mixins;
 @use 'variables.forms' as forms-variables;
+@use '../../layout/density';
 
 @use '@cds/core/tokens/tokens.scss';
 
@@ -28,7 +29,7 @@
       @include forms-mixins.checkbox-radio-input-styles(forms-variables.$clr-forms-radio-size);
       @extend %custom-radio;
       border-radius: 50%; // Style outline radius properly
-      padding: tokens.$cds-global-space-3 0;
+      padding: density.$clr-base-vertical-offset-xs 0;
 
       &:not(:disabled) {
         cursor: pointer;
