--- a/projects/angular/src/forms/styles/_toggles.clarity.scss
+++ b/projects/angular/src/forms/styles/_toggles.clarity.scss
@@ -6,6 +6,7 @@
  */
 @use 'sass:meta';
 @use '../../button/variables.toggles' as toggle-variables;
+@use '../../layout/density';
 @use '../../utils/mixins';
 @use '@cds/core/tokens/tokens.scss';
 
@@ -160,7 +161,7 @@
     .clr-control-label {
       display: block;
       @include mixins.generate-typography-token('SECONDARY-13-RG-CPT');
-      padding: tokens.$cds-global-space-3 0;
+      padding: density.$clr-base-vertical-offset-xs 0;
       margin-top: 0;
     }
   }
