feat(buttons): use density layout tokens

--- a/projects/angular/src/button/_variables.buttons.scss
+++ b/projects/angular/src/button/_variables.buttons.scss
@@ -19,6 +19,7 @@ $clr-btn-horizontal-margin: var(--clr-btn-horizontal-margin) !default;
 $clr-btn-horizontal-padding: var(--clr-btn-horizontal-padding) !default;
 $clr-btn-vertical-padding: var(--clr-btn-vertical-padding) !default;
 $clr-btn-padding: var(--clr-btn-padding) !default;
+$clr-btn-gap: var(--clr-btn-gap) !default;
 
 $clr-btn-height: var(--clr-btn-height) !default;
 $clr-btn-height-sm: var(--clr-btn-height-sm) !default;
