--- a/projects/angular/src/button/_properties.buttons.scss
+++ b/projects/angular/src/button/_properties.buttons.scss
@@ -5,6 +5,7 @@
  * The full license information can be found in LICENSE in the root directory of this project.
  */
 @use '../utils/mixins';
+@use '../layout/density/' as density;
 @use '@cds/core/tokens/tokens.scss';
 
 @include mixins.exports('button.properties') {
@@ -14,14 +15,15 @@
     --clr-btn-horizontal-margin: #{tokens.$cds-global-space-6};
     --clr-btn-horizontal-padding: #{tokens.$cds-global-space-6};
     --clr-btn-vertical-padding: 0;
-    --clr-btn-padding: var(--clr-btn-vertical-padding) var(--clr-btn-horizontal-padding);
+    --clr-btn-padding: var(--clr-btn-vertical-padding) #{density.$clr-base-horizontal-offset-l};
+    --clr-btn-gap: #{density.$clr-base-gap-s};
 
     // Sizing
     --clr-btn-height: #{tokens.$cds-global-space-11}; // this is standard height
     --clr-btn-height-sm: #{tokens.$cds-global-space-9}; // this is btn-sm (small) height
 
     // Borders
-    --clr-btn-border-radius: #{tokens.$cds-alias-object-border-radius-100};
+    --clr-btn-border-radius: #{density.$clr-base-border-radius-s};
     --clr-btn-border-width: #{tokens.$cds-global-space-1};
 
     // Standard button appearance - overrideable but not advertised!
@@ -30,7 +32,7 @@
     --clr-btn-appearance-standard-icon-size: #{tokens.$cds-global-space-7};
 
     // form-style button appearance styles - overrideable but not advertised!
-    --clr-btn-appearance-form-height: var(--clr-btn-height);
+    --clr-btn-appearance-form-height: #{density.$clr-base-row-height-m};
     --clr-btn-appearance-form-padding: var(--clr-btn-padding);
 
     --clr-btn-group-focus-outline: #{tokens.$cds-alias-object-interaction-outline};
