feat(typography): update density tokens and add concrete letter spacings

--- a/projects/angular/src/layout/density/_variables.density.scss
+++ b/projects/angular/src/layout/density/_variables.density.scss
@@ -13,12 +13,16 @@ $clr-base-typography-font-size-default: var(--clr-base-typography-font-size-defa
 $clr-base-typography-font-size-sub-section: var(--clr-base-typography-font-size-sub-section);
 $clr-base-typography-font-size-section: var(--clr-base-typography-font-size-section);
 $clr-base-typography-font-size-heading: var(--clr-base-typography-font-size-heading);
+$clr-base-typography-font-size-headline: var(--clr-base-typography-font-size-headline);
+$clr-base-typography-font-size-display: var(--clr-base-typography-font-size-display);
 
 $clr-base-typography-line-height-12: var(--clr-base-typography-line-height-12);
 $clr-base-typography-line-height-16: var(--clr-base-typography-line-height-16);
 $clr-base-typography-line-height-20: var(--clr-base-typography-line-height-20);
 $clr-base-typography-line-height-24: var(--clr-base-typography-line-height-24);
 $clr-base-typography-line-height-32: var(--clr-base-typography-line-height-32);
+$clr-base-typography-line-height-36: var(--clr-base-typography-line-height-36);
+$clr-base-typography-line-height-44: var(--clr-base-typography-line-height-44);
 
 $clr-base-border-stroke: var(--clr-base-border-stroke);
 
