--- a/projects/angular/src/layout/density/_properties.density.scss
+++ b/projects/angular/src/layout/density/_properties.density.scss
@@ -17,12 +17,16 @@
   --clr-base-typography-font-size-sub-section: #{tokens.$cds-global-space-7};
   --clr-base-typography-font-size-section: #{mixins.baselinePx(20)};
   --clr-base-typography-font-size-heading: #{tokens.$cds-global-space-9};
+  --clr-base-typography-font-size-headline: #{tokens.$cds-global-space-10};
+  --clr-base-typography-font-size-display: #{mixins.baselinePx(40)};
 
   --clr-base-typography-line-height-12: #{tokens.$cds-global-space-6};
   --clr-base-typography-line-height-16: #{tokens.$cds-global-space-7};
   --clr-base-typography-line-height-20: #{mixins.baselinePx(20)};
   --clr-base-typography-line-height-24: #{tokens.$cds-global-space-9};
   --clr-base-typography-line-height-32: #{tokens.$cds-global-space-10};
+  --clr-base-typography-line-height-36: #{tokens.$cds-global-space-11};
+  --clr-base-typography-line-height-44: #{mixins.baselinePx(44)};
 
   --clr-base-border-stroke: #{tokens.$cds-global-space-2};
 
@@ -101,12 +105,16 @@
     --clr-base-typography-font-size-sub-section: #{tokens.$cds-global-space-7};
     --clr-base-typography-font-size-section: #{mixins.baselinePx(20)};
     --clr-base-typography-font-size-heading: #{tokens.$cds-global-space-9};
+    --clr-base-typography-font-size-headline: #{tokens.$cds-global-space-10};
+    --clr-base-typography-font-size-display: #{mixins.baselinePx(40)};
 
     --clr-base-typography-line-height-12: #{tokens.$cds-global-space-6};
     --clr-base-typography-line-height-16: #{tokens.$cds-global-space-7};
     --clr-base-typography-line-height-20: #{mixins.baselinePx(20)};
     --clr-base-typography-line-height-24: #{tokens.$cds-global-space-9};
     --clr-base-typography-line-height-32: #{tokens.$cds-global-space-10};
+    --clr-base-typography-line-height-36: #{tokens.$cds-global-space-11};
+    --clr-base-typography-line-height-44: #{mixins.baselinePx(44)};
 
     --clr-base-border-stroke: #{tokens.$cds-global-space-2};
 
@@ -187,12 +195,16 @@
     --clr-base-typography-font-size-sub-section: #{tokens.$cds-global-space-7};
     --clr-base-typography-font-size-section: #{mixins.baselinePx(20)};
     --clr-base-typography-font-size-heading: #{tokens.$cds-global-space-9};
+    --clr-base-typography-font-size-headline: #{mixins.baselinePx(28)};
+    --clr-base-typography-font-size-display: #{tokens.$cds-global-space-11};
 
     --clr-base-typography-line-height-12: #{tokens.$cds-global-space-7};
     --clr-base-typography-line-height-16: #{tokens.$cds-global-space-7};
     --clr-base-typography-line-height-20: #{tokens.$cds-global-space-8};
     --clr-base-typography-line-height-24: #{mixins.baselinePx(22)};
     --clr-base-typography-line-height-32: #{mixins.baselinePx(28)};
+    --clr-base-typography-line-height-36: #{tokens.$cds-global-space-10};
+    --clr-base-typography-line-height-44: #{tokens.$cds-global-space-10};
 
     --clr-base-border-stroke: #{tokens.$cds-global-space-1};
 
@@ -273,12 +285,16 @@
   //   --clr-base-typography-font-size-sub-section: #{mixins.baselinePx(14)};
   //   --clr-base-typography-font-size-section: #{tokens.$cds-global-space-8};
   //   --clr-base-typography-font-size-heading: #{mixins.baselinePx(22)};
+  //   --clr-base-typography-font-size-headline: #{tokens.$cds-global-space-9};
+  //   --clr-base-typography-font-size-display: #{tokens.$cds-global-space-11};
 
   //   --clr-base-typography-line-height-12: #{mixins.baselinePx(11)};
   //   --clr-base-typography-line-height-16: #{tokens.$cds-global-space-6};
   //   --clr-base-typography-line-height-20: #{tokens.$cds-global-space-7};
   //   --clr-base-typography-line-height-24: #{mixins.baselinePx(20)};
   //   --clr-base-typography-line-height-32: #{mixins.baselinePx(20)};
+  //   --clr-base-typography-line-height-36: #{tokens.$cds-global-space-10};
+  //   --clr-base-typography-line-height-44: #{tokens.$cds-global-space-10};
 
   //   --clr-base-border-stroke: #{tokens.$cds-global-space-1};
 
