--- a/projects/angular/src/popover/dropdown/_dropdown.clarity.scss
+++ b/projects/angular/src/popover/dropdown/_dropdown.clarity.scss
@@ -13,6 +13,7 @@
 @use 'variables.dropdown' as dropdown-variables;
 @use '@cds/core/tokens/tokens.scss';
 @use '../../layout/tabs/tabs.clarity' as tabs;
+@use '../../layout/density/' as density;
 
 @include meta.load-css('properties.dropdown');
 
@@ -112,12 +113,12 @@
         )
       );
 
-      padding: 0 tokens.$cds-global-space-7;
+      padding: 0 density.$clr-base-horizontal-offset-l;
       margin: 0;
 
       & ~ .dropdown-item,
       & ~ .dropdown > .dropdown-item {
-        padding-left: tokens.$cds-global-space-10;
+        padding-left: density.$clr-base-horizontal-offset-xl;
       }
 
       @extend %dropdown-content;
@@ -159,9 +160,12 @@
           -webkit-mask-size: cover;
           mask-size: cover;
           background-color: dropdown-variables.$clr-dropdown-item-color;
-          @include mixins.equilateral(tokens.$cds-global-space-6);
+          @include mixins.equilateral(density.$clr-base-icon-size-xs);
           transform: rotate(-90deg);
-          margin-left: auto;
+          position: absolute;
+          // The original token that needs to be used for the size of this icon is "clr-base-icon-size-s" but as we don't have it as a real icon
+          // here we need to use lower size and add additional space to simulate the padding that is part of the SVGs.
+          right: calc(density.$clr-base-icon-size-s - density.$clr-base-icon-size-xs);
         }
 
         &.active:after {
